--- a/frontend/src/components/Jobs/Jobs.css
+++ b/frontend/src/components/Jobs/Jobs.css
@@ -1,10 +1,10 @@
 .search_job {
     display: flex;
-    width: 40vw;
+    width: 32vw;
     height: 6.2vh;
     background-color: white;
-    margin: 2%;
-    margin-left: 18vw;
+    margin: 1%;
+    margin-left: 20vw;
     border-radius: 25px;
 }
 
@@ -63,12 +63,12 @@
     display: flex;
     flex-direction: row;
     background-color: #6398DE;
-    margin: 1%;
+    margin: 0% 1% 0% 1%;
     color: white;
     font-size: large;
     width: 70vw;
     position: relative;
-    top: 3vh;
+    top: 2.5vh;
     left: 0.5vw;
     z-index: 1;
 }  
