message addedin graphics and others

--- a/frontend/src/components/Cards/Cards.css
+++ b/frontend/src/components/Cards/Cards.css
@@ -131,3 +131,8 @@
     width: 5.5vw;
 }
 
+.upcoming_interviews_message {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8em;
+}
