--- a/frontend/src/components/Graphics/Graphics.css
+++ b/frontend/src/components/Graphics/Graphics.css
@@ -14,3 +14,9 @@
     background-color: white;
     margin: 2.5vw;
 }
+
+.graphics_page_message {
+    display: flex;
+    justify-content: center;
+    margin-top: 10vh;
+}
